syntax = "proto3";


option go_package="github.com/kiritocyanpine/grpctest";

import "proto/laptop_message.proto";

message CreateLaptopRequest{
    Laptop laptop = 1;
}

message CreateLaptopResponse {
    string id = 1;
}

service LaptopService {
    rpc CreateLaptop(CreateLaptopRequest) returns (CreateLaptopResponse) {};
    rpc GetLaptop(GetLaptopListRequest) returns (GetLaptopListResponse) {};
}

message GetLaptopListRequest{

}

message GetLaptopListResponse{
    repeated Laptop laptops = 1;
}
